--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "dayjs": "^1.8.23",
     "mint-ui": "^2.2.13",
+    "vant": "^2.5.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -23,6 +24,7 @@
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-import": "^1.13.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
